--- a/web/themes/custom/bartik/templates/node--customer--pdf.html.twig
+++ b/web/themes/custom/bartik/templates/node--customer--pdf.html.twig
@@ -144,13 +144,13 @@
                                 {{ from_date }} - {{ to_date }}
                             </td>
                             <td class="col-2 text-center border-0">{{ payment_mode }} </td>
-                            <td class="col-1 text-center border-0"> रु {{ node.field_choose_data_plan.entity.field_plan_price.value|number_format(2) }} </td>
+                            <td class="col-1 text-center border-0"> <img class="currency" src="/sites/default/files/rupees.png" /> {{ node.field_choose_data_plan.entity.field_plan_price.value|number_format(2) }} </td>
                         </tr>
                         </tbody>
                         <tfoot class="card-footer">
                         <tr>
                             <td colspan="3" class="text-right"><strong>Sub Total:</strong></td>
-                            <td class="text-center"> रु {{ node.field_choose_data_plan.entity.field_plan_price.value|number_format(2) }} </td>
+                            <td class="text-center"> <img class="currency" src="/sites/default/files/rupees.png" /> {{ node.field_choose_data_plan.entity.field_plan_price.value|number_format(2) }} </td>
                         </tr>
                         </tfoot>
                     </table>
