Added the invoice date

--- a/web/themes/custom/bartik/templates/node--customer--pdf.html.twig
+++ b/web/themes/custom/bartik/templates/node--customer--pdf.html.twig
@@ -105,6 +105,8 @@
     <main>
         <div class="row">
             <div class="col-sm-5"><strong>Date:</strong> {{ current_date }} </div>
+            <div class="col-sm-6 text-sm-right"> <strong>Invoice No:</strong>{{ random(50, 1000) }}</div>
+
         </div>
         <hr>
         <div class="row">
